# pam

./: CMakeLists.txt  build_pam.sh  introspect.h  json.c  json.h  scitokens_verify.c  scitokens_verify.h
install/lib/: libjson-c.so.5.1.0
install/lib/cmake/json-c/: json-c-targets.cmake
install/lib/pkgconfig/: json-c.pc
